--- a/personales.html
+++ b/personales.html
@@ -14,6 +14,7 @@
     <a href="estudios.html">Estudios</a>
     <a href="experiencia.html">Experiencia</a>
     <a href="otros.html">Otros</a>
+    <a href="amigos.html">Mis amigos</a>
     <a href="inicio.html">Inicio</a> </font></center>
 
 
