--- a/personales.html
+++ b/personales.html
@@ -23,6 +23,7 @@
 <h1>Datos Personales</h1>
 </header>
 <main>
+    <b>Nombre:</b> Rosmery Jamileth<br>
     <b>Apellido:</b> Lopez Barrera<br>
     <b>Grado:</b> 5to bach "A"<br>
     <b>Fecha de nacimiento:</b> 19/03/2008<br>
