--- a/personales.html
+++ b/personales.html
@@ -28,6 +28,7 @@
     <b>Grado:</b> 5to bach "A"<br>
     <b>Fecha de nacimiento:</b> 19/03/2008<br>
     <b>Correo electronico:</b> rosmerylopez1908@gmail.com<br>
+    <b>Teléfono:</b> 3003-1038<br>
     <b>Nacionalidad:</b> Guatemalteca<br>
 </main>
 </body>
